--- a/src/global.css
+++ b/src/global.css
@@ -5,9 +5,10 @@
 
 :root {
   --font-roboto: "Roboto", sans-serif;
-  --background: oklch(1 0 0);
+  --background: #f5f5f5;
   --orange-color: #ec6724;
-  --background-input: #d9d9d9;
+  --input-color: #d9d9d9;
+  --input-text: ##AAAAAA
   --commom-text: #000000;
   --trash-icon: #db0909;
   --pencil-icon: #000000;
@@ -49,7 +50,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-orange-color: var(--orange-color);
-  --color-background-input: var(--background-input);
+  --color-input-color: var(--input-color);
+  --color-input-text: var(--input-text);
   --color-commom-text: var(--commom-text);
   --color-trash-icon: var(--trash-icon);
   --color-pencil-icon: var(--pencil-icon);
