feat: Adds client management features with forms and pagination
Implements a new ClientForm component for creating and editing clients, enhancing user interaction in the client management process.

Integrates pagination for better navigation through client lists and incorporates a toast notification system for user feedback upon actions.

Improves overall structure by organizing client-related types and ensuring proper data validation using Zod.

Refactors existing components to accommodate these changes and enhances UI elements for better usability.

--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
   --background: #f5f5f5;
   --orange-color: #ec6724;
   --input-color: #d9d9d9;
-  --input-text: ##AAAAAA
+  --input-text: #aaaaaa;
   --commom-text: #000000;
   --trash-icon: #db0909;
   --pencil-icon: #000000;
